syntax = "proto3";
import "./common_messages.proto";
package aka_messages;

