syntax = "proto3";

package aka_app;


service AppService {
    rpc App(Empty) returns (Empty);
}

message Empty {}