syntax = "proto3";

package aka_users;


service UsersService {
    rpc Create (CreateUser) returns (UserModel);
    rpc Message ( stream MSG ) returns (stream MSG);
}

message MSG {
    string message = 1;
}

message UserModel {
    string username = 1;
    string phoneNumber = 2;
    string _id = 3;
}

message CreateUser {
    string username = 1;
    string phoneNumber = 2;
}

message Empty {}
